[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Calibpy"
dynamic = ["version"]
description = 'camera calibration and registration toolbox'
readme = "README.md"
requires-python = ">=3.6"
license = "proprietary"
keywords = []
authors = [
  { name = "Sven Wanner", email = "sven.wanner@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "numpy",
  "scipy",
  "autopep8",
  "fake-bpy-module-3.2",
  "flake8",
  "imath",
  "matplotlib",
  "numpy",
  "scipy",
  "open3d",
  "opencv-contrib-python",
  "OpenEXR",
  "PyYAML",
  "pytest",
  "flake8",
]

[project.urls]
Documentation = "https://github.com/artificialpixels/calibpy#readme"
Issues = "https://github.com/artificialpixels/calibpy/issues"
Source = "https://github.com/artificialpixels/calibpy"

[tool.hatch.build.targets.wheel]
packages = ["calibpy"]

[tool.hatch.version]
path = "calibpy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = false
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
packages = [
  "pip list"
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py39"]
line-length = 80
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 80
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["calibpy"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["calibpy", "tests"]
branch = true
parallel = true
omit = [
  "calibpy/__about__.py",
]

[tool.coverage.paths]
calibpy = ["calibpy"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = false
mypy_path = "calibpy/:."
packages = [
  "calibpy",
  "tests"
]
